Fix text overflow bug

--- a/src/Lists/List/ListItem/ListItem.module.css
+++ b/src/Lists/List/ListItem/ListItem.module.css
@@ -1,3 +1,7 @@
+.itemContent {
+  overflow-x: hidden;
+}
+
 .content {
   display: flex;
 }
